<resources>
    <string name="app_name">VK-GPT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello from VK GPT!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_login">Phone or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in with VK ID</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Error: (%1$s) %2$s</string>
    <string name="login_vk_text">Login via VK</string>
    <string name="action_sign_up">Haven\'t an account yet? <u>Sign up</u></string>
    <string name="title_activity_onboarding" translatable="false">OnboardingActivity</string>
    <string name="http_error">Something went wrong, check your network connection</string>
    <string name="title_activity_chats_list">Chats</string>
    <string name="logout">Log out</string>
    <string name="welcome_back">Welcome back, %1$s!</string>
    <string name="restart">Restart the app</string>
    <string name="error">Oops, an error occurred</string>
    <string name="wtf" translatable="false">Something weird that should never happen :/ Some debug info: $1%s</string>
    <string name="photo">Photo</string>
    <string name="sticker">Sticker</string>
    <string name="doc">File</string>
    <string name="docs">Attachments</string>
    <string name="title_activity_view_chat">Chat</string>
    <string name="message">Message</string>
    <string name="captcha_caption">Enter the code from image below</string>
    <string name="captcha_hint">Code</string>
    <string name="continue_hint">Continue</string>
    <string name="cancel_hint">Cancel</string>
</resources>